*** Facebook for WooCommerce Changelog ***

2018-08-06 - Version 1.9.4
* Support Lead Gen Event - Contact Form 7
* Separate Redirect Entry Point Logging

2018-08-01 - Version 1.9.3
* Add Edge Cases for Integration Test.
* Fix Undefined PHP Warning.
* Add subscribe event.
* Fix Unable to Change Pixel after Setup.
* Fix Integration Test Confirmation Dialog.

2018-07-08 - Version 1.9.2
* Exclude Virtual Variation and Set Staging.
* Add Version Number for Logging.

2018-06-22 - version 1.9.1
* Fix Page Name Extra Space .
* Remove Strange Box in Design.

2018-06-15 - version 1.9.0
* Fix Performance Issue by Reusing Existing wp_query Object Contents.
* Rename Long Column Which Causes UI Issues for Users in Product Overview.
* Update Admin Notice Content.
* Fix Weird ID Error Message.
* Fix Product ID for Brand Attribute.
* Don't use Checkout URL for Unknown Product Types.
* Add Beta Integration Test for Syncing Products by Uploading Feed.
* Fix Pixel Fired on Related Products.
* Redesign Admin Panel.
* Add Integration Test Entry Point Button.

2018-05-02 - version 1.8.7
* Fix PHP Error Due to product_brand Taxonomy Not Existing

2018-04-26 - version 1.8.6
* Potential Fix for Compatibility with Enhanced ECommerce Plugin
* Reduce Fetch ID API Call for Hidden Products
* Support Product Bundles Extension
* Basic Support for WP All Import
* Fix Trashing and Deletion
* Fetch Brand and Support WooCommerce Brand Extension
* Remove warning for duplicate SKUs
* Remove upsell header on config page
* Update Info Banner Content
* Fix Warning When Deleting NON PRODUCT post
* WPML Support : Language Selector

2018-04-17 - version 1.8.5
* Fix ViewContent event incorrectly firing with content_type 'product'
* Fix product group retailer id not matching ViewContent content id.
* Added logging and defensive code to debug #348
* Warning about Cart URL changes now clears with Force Resync

2018-04-06 - version 1.8.4
* Fire AddToCart on Cart Viewed for shops which redirect to cart.